[tool.poetry]
name = "flare-explorer-python"
version = "0.1.0"
description = ""
authors = ["James Davis <jamesecd@gmail.com>"]
readme = "README.md"
packages = [{include = "flare_explorer"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
