[tool.poetry]
name = "flare-explorer-python"
version = "0.1.1"
description = "A lightweight library that works as a connector to the Flare explorer api"
authors = ["James Davis <jamesecd@gmail.com>"]
keywords = ["flare-explorer", "flare", "network", "api", "crypto", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/james-ecd/flare-explorer-python"
repository = "https://github.com/james-ecd/flare-explorer-python"
include = [
    "LICENSE",
]
packages = [{include = "flare_explorer"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
aiohttp = "^3.8.3"
requests-mock = "^1.10.0"
isort = "^5.11.4"
codecov = "^2.1.12"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
