[tool.poetry]
name = "flare-explorer-python"
version = "0.2.0"
description = "A lightweight library that works as a connector to the Flare explorer api"
authors = ["James Davis <jamesecd@gmail.com>"]
keywords = ["flare-explorer", "flare", "network", "api", "crypto", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/james-ecd/flare-explorer-python"
repository = "https://github.com/james-ecd/flare-explorer-python"
include = [
    "LICENSE",
]
packages = [{include = "flare_explorer"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
pydantic = "^2.11.0"
gql = "^3.5.0"
requests-toolbelt = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
requests-mock = "^1.12.0"
pytest-cov = "^6.2.0"
ruff = "^0.12.0"
mypy = "^1.13.0"
types-requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line too long
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
